--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title> Contact Me</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
     <label>Enter Email:</label>
     <input type="email" name="yourEmail" value=""><br>
     <label>Enter Messege:</label><br>
-    <textarea name="YourMessage" rows="10" cols="30"></textarea><br>
+    <textarea name="YourMessages" rows="10" cols="30"></textarea><br>
     <input type="submit" name="" value="">
 </body>
 </form>
